# mxl

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile.in  README.md  SECURITY.md  build_all.sh  local-build.md  vcpkg.json  vcpkg.json.license  zensical.toml
lib/: CMakeLists.txt
lib/cmake/: libmxl.pc.in  mxl-config.cmake.in
lib/fabrics/: CMakeLists.txt
lib/fabrics/include/mxl/: fabrics.h
lib/fabrics/ofi/: CMakeLists.txt
lib/fabrics/ofi/cmake/: libmxl-fabrics.pc.in  mxl-fabrics-config.cmake.in
lib/fabrics/ofi/src/: fabrics.cpp
lib/fabrics/ofi/src/internal/: Address.cpp  Address.hpp  AddressVector.cpp  AddressVector.hpp  AudioBounceBuffer.cpp  AudioBounceBuffer.hpp  Base64.hpp  Completion.cpp  Completion.hpp  CompletionQueue.cpp  (+59 more)
lib/include/mxl/: anc.h  dataformat.h  flow.h  flowinfo.h  mxl.h  platform.h  rational.h  time.h  version.h.in
lib/internal/: CMakeLists.txt
lib/internal/include/mxl-internal/: ContinuousFlowData.hpp  ContinuousFlowReader.hpp  ContinuousFlowWriter.hpp  DiscreteFlowData.hpp  DiscreteFlowReader.hpp  DiscreteFlowWriter.hpp  DomainWatcher.hpp  Flow.hpp  FlowData.hpp  FlowInfo.hpp  FlowIoFactory.hpp  FlowManager.hpp  FlowOptionsParser.hpp  FlowParser.hpp  FlowReader.hpp  FlowState.hpp  FlowWriter.hpp  Instance.hpp  Logging.hpp  MediaUtils.hpp  PosixFlowIoFactory.hpp  SharedMemory.hpp  Thread.hpp  Time.hpp  Timing.hpp
lib/internal/src/: Deferred.hpp  DomainWatcher.cpp  DynamicPointerCast.hpp  Flow.cpp  FlowData.cpp  FlowInfo.cpp  FlowIoFactory.cpp  FlowManager.cpp  FlowOptionsParser.cpp  FlowParser.cpp  FlowReader.cpp  FlowWriter.cpp  Instance.cpp  Logging.cpp  MediaUtils.cpp  PathUtils.cpp  PosixContinuousFlowReader.cpp  PosixContinuousFlowReader.hpp  PosixContinuousFlowWriter.cpp  PosixContinuousFlowWriter.hpp  PosixDiscreteFlowReader.cpp  PosixDiscreteFlowReader.hpp  PosixDiscreteFlowWriter.cpp  PosixDiscreteFlowWriter.hpp  PosixFlowIoFactory.cpp  SharedMemory.cpp  Sync.cpp  Thread.cpp  Time.cpp  Timing.cpp
lib/internal/tests/: CMakeLists.txt  test_domainwatcher.cpp  test_flowmanager.cpp  test_options.cpp  test_sharedmem.cpp
lib/src/: flow.cpp  mxl.cpp  time.cpp
lib/src/internal/: ContinuousFlowData.hpp  ContinuousFlowReader.hpp  ContinuousFlowWriter.hpp  DiscreteFlowData.hpp  DiscreteFlowReader.hpp  DiscreteFlowWriter.hpp  DomainWatcher.cpp  DomainWatcher.hpp  Flow.cpp  Flow.hpp  FlowData.cpp  FlowData.hpp  FlowIoFactory.cpp  FlowIoFactory.hpp  FlowManager.cpp  FlowManager.hpp  FlowParser.cpp  FlowParser.hpp  FlowReader.cpp  FlowReader.hpp  FlowReaderFactory.hpp  FlowWriter.cpp  FlowWriter.hpp  FlowWriterFactory.hpp  Instance.cpp  Instance.hpp  Logging.cpp  Logging.hpp  PathUtils.cpp  PathUtils.hpp  PosixContinuousFlowReader.cpp  PosixContinuousFlowReader.hpp  PosixContinuousFlowWriter.cpp  PosixContinuousFlowWriter.hpp  PosixDiscreteFlowReader.cpp  PosixDiscreteFlowReader.hpp  PosixDiscreteFlowWriter.cpp  PosixDiscreteFlowWriter.hpp  PosixFlowIoFactory.cpp  PosixFlowIoFactory.hpp  (+17 more)
lib/src/internal/detail/: ClockHelpers.hpp
lib/tests/: CMakeLists.txt  Utils.cpp  Utils.hpp  all_headers.c  test_domainwatcher.cpp  test_flowmanager.cpp  test_flows.cpp  test_flows_timing.cpp  test_instance.cpp  test_options.cpp  test_pkgconfig_c_link.sh  test_sharedmem.cpp  test_time.cpp
lib/tests/data/: audio_flow.json  data_flow.json  invalid_interlaced_height.json  invalid_interlaced_rate.json  malformed.json  no_grain_rate.json  no_id.json  no_media_type.json  sound_flow.json  v210+alpha_flow.json  v210_flow.json  v210a_flow.json  vanc_flow.json
lib/tests/fabrics/: CMakeLists.txt  test_basics.cpp
lib/tests/fabrics/ofi/: CMakeLists.txt  Util.hpp  test_Address.cpp  test_AudioBounceBuffer.cpp  test_Domain.cpp  test_Provider.cpp  test_Region.cpp
lib/tests/mxl_unittest_domain/5fbec3b1-1b0f-417d-9059-8b94a47197ed.mxl-flow/: data
rust/: .gitattributes  .gitignore  Cargo.lock.license  Cargo.toml  README.md  deny.toml  flake.nix
rust-bindings/: Cargo.toml  README.md
rust-bindings/mxl/: Cargo.toml  build.rs
rust-bindings/mxl-sys/: Cargo.toml  build.rs
rust-bindings/mxl-sys/mxl-headers-2025-06-17/mxl/: dataformat.h  mxl.h  time.h  version.h
rust-bindings/mxl/examples/: flow-reader.rs
rust-bindings/mxl/src/: error.rs  flow.rs  flow_reader.rs  instance.rs  lib.rs
rust-bindings/mxl/tests/: basic_tests.rs
rust/.config/: nextest.toml
rust/gst-mxl-rs/: Cargo.toml  README.md
rust/gst-mxl-rs/src/: lib.rs
rust/gst-mxl-rs/src/format/: data.rs  mod.rs
rust/gst-mxl-rs/src/mxlsink/: imp.rs  mod.rs  render_data.rs  sink_tests.rs  state.rs
rust/gst-mxl-rs/src/mxlsrc/: create_data.rs  imp.rs  mod.rs  mxl_helper.rs  src_tests.rs  state.rs
rust/gst-mxl-rs/tests/: data_round_trip.rs  video_data_sync.rs
rust/gst-mxl-rs/tests/data/: example.srt  example.srt.license
rust/mxl/: Cargo.toml  build.rs
rust/mxl-sys/: .gitignore  Cargo.toml  build.rs  wrapper-with-version-h.h  wrapper-without-version-h.h  wrapper.h
rust/mxl-sys/src/: lib.rs
rust/mxl-sys/tests/: simple_test.rs
rust/mxl/examples/: flow-reader.rs  flow-writer.rs
rust/mxl/examples/common/: mod.rs
rust/mxl/src/: api.rs  config.rs  error.rs  flow.rs  flow_reader.rs  flow_writer.rs  grain_reader.rs  grain_write_access.rs  grain_writer.rs  instance.rs  lib.rs  samples.rs  samples_data.rs  samples_reader.rs  samples_write_access.rs  samples_writer.rs  tools.rs
rust/mxl/src/flow/: flowdef.rs  reader.rs  writer.rs
rust/mxl/src/grain/: data.rs  reader.rs  write_access.rs  writer.rs
rust/mxl/src/samples/: data.rs  reader.rs  write_access.rs  writer.rs
rust/mxl/tests/: basic_tests.rs  flowdef_data.rs
tools/mxl-clip-player/: CMakeLists.txt  main.cpp
tools/mxl-fabrics-demo/: CMakeLists.txt  demo.cpp
tools/mxl-gst/: CMakeLists.txt  looping_filesrc.cpp  sink.cpp  testsrc.cpp  utils.hpp  videosink.cpp  videotestsrc.cpp
tools/mxl-info/: CMakeLists.txt  main.cpp
utils/gst-looping-filesrc/: CMakeLists.txt  LICENSE.txt  README.md  gst-looping-filesrc.cpp  gst-looping-filesrc.h
(+82 files in other folders)
