# SPDX-FileCopyrightText: 2025 Contributors to the Media eXchange Layer project.
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.24 FATAL_ERROR)

# Allow version in project definition
cmake_policy(SET CMP0048 NEW)
# Only interpret if arguments as variables or keywords when unquoted.
cmake_policy(SET CMP0054 NEW)
# Allow visibility definitions
cmake_policy(SET CMP0063 NEW)
# Interpret target_sources paths as relative to the current source dir
cmake_policy(SET CMP0076 NEW)
# Set the timestamps of all extracted contents to the time of the extraction
cmake_policy(SET CMP0135 NEW)

option(MXL_ENABLE_FABRICS_OFI "Enable building the fabrics library with libfabric" OFF)

# Build type. Used as a build suffix or in the operating system package file name.  Currently manually set but could be automated using branch names, etc.
# One of : dev, beta, rc, "" (empty for final releases)
set(MXL_BUILD_TYPE "dev")
set(MXL_BUILD_SUFFIX "-${MXL_BUILD_TYPE}")

set(mxl_VERSION 1.1.0)

if(DEFINED MXL_BUILD_NUMBER)
    string(APPEND mxl_VERSION ".${MXL_BUILD_NUMBER}")
else()
    string(APPEND mxl_VERSION ".0")
endif()

find_package(Git QUIET)

if(GIT_FOUND AND EXISTS "${CMAKE_SOURCE_DIR}/.git")
    execute_process(
        COMMAND ${GIT_EXECUTABLE} rev-parse --short=12 HEAD
        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
        OUTPUT_VARIABLE GIT_HASH
        OUTPUT_STRIP_TRAILING_WHITESPACE
    )
else()
    set(GIT_HASH "unknown")
endif()


option(BUILD_DOCS "Build the docs" ON)
option(BUILD_TESTS "Build the tests" ON)
option(BUILD_TOOLS "Build the tools" ON)

project(mxl
    VERSION ${mxl_VERSION}
    LANGUAGES CXX C
)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")


#-------------------------------------------------------------------------------
# Determine optional IPO support and allow enabling IPO on a per target basis.
#-------------------------------------------------------------------------------
option(MXL_ENABLE_IPO "Enable LTO/IPO on the library targets." OFF)

set(MXL_IPO_SUPPORTED OFF)
if(MXL_ENABLE_IPO)
    include(CheckIPOSupported)

    check_ipo_supported(RESULT MXL_IPO_SUPPORTED OUTPUT output LANGUAGES C CXX)
    if(MXL_IPO_SUPPORTED)
        message(STATUS "Enabling LTO/IPO support.")
    else()
        message(WARNING "LTO/IPO is not supported: ${output}")
    endif()
endif()

if (MXL_IPO_SUPPORTED)
    function(mxl_enable_target_ipo target)
        message(STATUS "Enabling LTO/IPO on target: ${target}")
        set_target_properties(${target}
                PROPERTIES
                    INTERPROCEDURAL_OPTIMIZATION ON
            )
    endfunction()
else ()
    function(mxl_enable_target_ipo target)
    endfunction()
endif ()


find_program(ccache_executable ccache)

if(ccache_executable)
    message(STATUS "Using ccache from '${ccache_executable}'")
    set(CMAKE_DISABLE_PRECOMPILE_HEADERS ON)
    set(CMAKE_CXX_COMPILER_LAUNCHER ${ccache_executable})
endif()

# Enable testing for the project
enable_testing()

# Set macOS specific configuration
if(APPLE)
    # Add the official GStreamer framework paths to the PKG_CONFIG_PATH
    set(ENV{PKG_CONFIG_PATH} "/Library/Frameworks/GStreamer.framework/Versions/1.0/lib/pkgconfig:$ENV{PKG_CONFIG_PATH}")
endif()

# Default build is shared libraries.
# Use '-DBUILD_SHARED_LIBS=OFF' for static build.
option(BUILD_SHARED_LIBS "Build using shared libraries" ON)

# Default PIC ON for static builds.
# Use -DMXL_ENABLE_PIC=OFF to disable PIC
option(MXL_ENABLE_PIC "Enable PIC for static libraries" ON)

# Policy: shared always PIC, static set to MXL_ENABLE_PIC.
set(MXL_POSITION_INDEPENDENT_CODE ON)
if(NOT BUILD_SHARED_LIBS)
  set(MXL_POSITION_INDEPENDENT_CODE ${MXL_ENABLE_PIC})
endif()

add_subdirectory(lib)
add_subdirectory(utils)
if (BUILD_TOOLS)
    add_subdirectory(tools)
endif()

if(BUILD_DOCS)
    find_package(Doxygen)

    if(DOXYGEN_FOUND)
        include(FetchContent)

        FetchContent_Declare(
            doxygen-awesome-css
            URL https://github.com/jothepro/doxygen-awesome-css/archive/refs/heads/main.zip
        )
        FetchContent_MakeAvailable(doxygen-awesome-css)

        # Save the location the files were cloned into
        # This allows us to get the path to doxygen-awesome.css
        FetchContent_GetProperties(doxygen-awesome-css SOURCE_DIR AWESOME_CSS_DIR)

        # Generate the Doxyfile
        set(DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
        set(DOXYFILE_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
        configure_file(${DOXYFILE_IN} ${DOXYFILE_OUT} @ONLY)

        set(DOXYGEN_OUTPUT_DIR "${CMAKE_BINARY_DIR}/docs")

        add_custom_target(doc
            COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE_OUT}
            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
            COMMENT "Generating API documentation with Doxygen"
            BYPRODUCTS "${DOXYGEN_OUTPUT_DIR}/html/index.html"
            VERBATIM
        )

        install(DIRECTORY "${CMAKE_BINARY_DIR}/docs/html"
            DESTINATION share/doc/mxl
            FILES_MATCHING PATTERN "*")
    endif()
endif()

# CPack Configuration
set(CPACK_PACKAGE_NAME "dmfmxl-dev")
set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
set(CPACK_PACKAGE_DESCRIPTION "EBU DMF Media eXchange Layer SDK development package")
set(CPACK_PACKAGE_VENDOR "EBU.ch")
set(CPACK_PACKAGE_CONTACT "DMF MXL <mxl@ebu.ch>")

if(EXISTS "/etc/os-release")
    file(STRINGS "/etc/os-release" OS_RELEASE_CONTENTS)

    set(IS_DEBIAN FALSE)
    set(IS_RPM FALSE)

    foreach(LINE IN LISTS OS_RELEASE_CONTENTS)
        if(LINE MATCHES "^ID=(.*)")
            set(DISTRO_ID "${CMAKE_MATCH_1}")
        endif()
    endforeach()

    if(DISTRO_ID MATCHES "ubuntu|debian")
        set(IS_DEBIAN TRUE)
    elseif(DISTRO_ID MATCHES "alma|amzn|rocky|rhel|fedora|centos")
        set(IS_RPM TRUE)
    endif()

    if(IS_DEBIAN)
        set(CPACK_GENERATOR "DEB")
        set(CPACK_DEBIAN_PACKAGE_DEPENDS "gstreamer1.0-x, gstreamer1.0-plugins-good")
        set(CPACK_DEBIAN_PACKAGE_SECTION "devel")
        set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")

        find_program(DPKG_EXECUTABLE dpkg)

        if(DPKG_EXECUTABLE)
            execute_process(
                COMMAND ${DPKG_EXECUTABLE} --print-architecture
                OUTPUT_VARIABLE DEB_ARCH
                OUTPUT_STRIP_TRAILING_WHITESPACE
            )
        else()
            message(FATAL_ERROR "dpkg not found — cannot determine Debian architecture")
        endif()
        set(CPACK_PACKAGE_ARCHITECTURE "${DEB_ARCH}")
        set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${CPACK_PACKAGE_VERSION}~${MXL_BUILD_TYPE}+g${GIT_HASH}-1_${CPACK_PACKAGE_ARCHITECTURE}")

    elseif(IS_RPM)
        set(CPACK_GENERATOR "RPM")
        set(CPACK_RPM_PACKAGE_LICENSE "Apache-2.0")
        set(CPACK_RPM_PACKAGE_GROUP "Development/Libraries")
        # Let RPM auto-detect arch (x86_64, aarch64, etc.)
        #unset(CPACK_RPM_PACKAGE_ARCHITECTURE)
        set(CPACK_RPM_PACKAGE_AUTOREQPROV ON)

        # Not adding gstreamer as a dependency since some rpm based platforms do not provide the required packages (amazon linux 2023)
        # set(CPACK_RPM_PACKAGE_REQUIRES "")

        string(TOLOWER "${MXL_BUILD_TYPE}" _bt)
        set(_rpm_release "1")

        if(_bt STREQUAL "")
            # final release
            set(_rpm_release "1")
        else()
            set(_rpm_release "0.1.${_bt}.g${GIT_HASH}")
        endif()
        set(CPACK_RPM_PACKAGE_RELEASE "${_rpm_release}%{?dist}")
        set(CPACK_RPM_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${_rpm_release}.${CMAKE_SYSTEM_PROCESSOR}.rpm")

    endif()
endif()

# Include CPack
include(CPack)
